fix: adjust header size on small screen

--- a/src/styles/socialMedia.css
+++ b/src/styles/socialMedia.css
@@ -41,6 +41,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .social-media__header h2 {
+        font-size: 1.5rem;
+    }
+
     .social-media__card {
         width: 100%;
     }
