--- a/src/styles/statistics.css
+++ b/src/styles/statistics.css
@@ -25,6 +25,9 @@
     .statistics__container p.source {
         margin-top: 200px;
     }
+    .statistics__container h2 {
+        font-size: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 300px) {
